Avoid inner gap for :active default buttons
The pushed state of default buttons would have a light inner border.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -447,7 +447,7 @@ GtkScrolledWindow.frame {
 }
 
 .button.default {
-    border-width: 2;
+    border-width: 1;
 }
 
 /*****************
